@@ -26,9 +26,14 @@ tasks.withType(JavaCompile).configureEach { // Java compile-time options:
     }
 }
 
+Boolean enableNativeAccess = JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)
+
 tasks.withType(JavaExec).configureEach { // Java runtime options:
     classpath sourceSets.main.runtimeClasspath
     enableAssertions = true
+    if (enableNativeAccess) {
+        jvmArgs '--enable-native-access=ALL-UNNAMED' // suppress System::load() warning
+    }
     //jvmArgs '-verbose:gc'
     //jvmArgs '-Xms1024m', '-Xmx1024m' // to enlarge the Java heap
 }
